# MTGOCubeBot

./: .gitignore  setup_structure.ps1
backend/: alembic.ini  cubecobra_debug.html  cubecobra_mtgo_export.txt  pyproject.toml  pytest.ini  refactor_services.ps1  reorganize_services.ps1  requirements.txt  update_pyproject.ps1
backend/alembic/: env.py
backend/alembic/versions/: 48d97f3eb650_create_loan_session_and_assignments_.py  52427c66da1b_create_inventory_items_table.py  55b916b59dde_add_discord_identity_fields_to_loan_.py  5a569fe4f8fa_create_cube_card_relation.py  5ede70dfaa6f_add_card_metadata.py  616d81239dd1_create_cards_table.py  6e08821a95a3_create_cube_table.py  a1922ee6a218_create_cube_table.py  a306c8c4f11c_add_cube_card_uniqueness.py  eee767a17a1e_add_cubecobra_id.py
backend/app/: main.py
backend/app/db/: database.py  session.py
backend/app/exceptions/: loan.py
backend/app/models/: __init__.py  card.py  cube.py  cube_card.py  inventory_item.py  loan_assignment.py  loan_session.py
backend/app/repositories/: loan_session_repository.py
backend/app/services/: cube_completeness_service.py  (+5 more)
backend/scripts/: check_cubecobra_export.py
backend/tests/: conftest.py  test_cube_completeness_service.py  test_cube_full_import.py  test_cube_import_service.py  test_cubecobra_client.py  test_cubecobra_export.py  test_cubecobra_import.py  test_inventory_model.py  test_inventory_service.py  test_loan_assignment_service.py  test_loan_conflict.py  test_loan_planning_service.py  test_loan_session_service.py  test_mtgo_parser.py  test_mtgo_parser_service.py
(+123 files in other folders)
