[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[project]
name = "mtgo-cubebot"
version = "0.1.0"
description = "MTGO CubeBot backend"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "pydantic-settings",
    "httpx"
]


[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]


[tool.setuptools.packages.find]
where = ["."]
include = [
    "app*"
]
exclude = [
    "tests*",
    "alembic*"
]


[tool.black]
line-length = 100


[tool.ruff]
line-length = 100